; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-integrity.c_dm_integrity_flush_buffers.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-integrity.c_dm_integrity_flush_buffers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_integrity_c = type { i32 }

@.str = private unnamed_addr constant [13 x i8] c"writing tags\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dm_integrity_c*)* @dm_integrity_flush_buffers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dm_integrity_flush_buffers(%struct.dm_integrity_c* %0) #0 {
  %2 = alloca %struct.dm_integrity_c*, align 8
  %3 = alloca i32, align 4
  store %struct.dm_integrity_c* %0, %struct.dm_integrity_c** %2, align 8
  %4 = load %struct.dm_integrity_c*, %struct.dm_integrity_c** %2, align 8
  %5 = getelementptr inbounds %struct.dm_integrity_c, %struct.dm_integrity_c* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @dm_bufio_write_dirty_buffers(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i64 @unlikely(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %1
  %12 = load %struct.dm_integrity_c*, %struct.dm_integrity_c** %2, align 8
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @dm_integrity_io_error(%struct.dm_integrity_c* %12, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @dm_bufio_write_dirty_buffers(i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @dm_integrity_io_error(%struct.dm_integrity_c*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
